create github pages

--- a/page3.html
+++ b/page3.html
@@ -45,7 +45,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown open">
                     <a class="nav-link link text-success dropdown-toggle display-7" href="page4.html#header1-15" data-toggle="dropdown-submenu" aria-expanded="true">
-                        SCHILDERIJEN<br></a><div class="dropdown-menu"><a class="text-success dropdown-item display-7" href="page8.html" aria-expanded="false">2017</a><a class="text-success dropdown-item display-7" href="page17.html#content4-31" aria-expanded="false">2018</a></div>
+                        SCHILDERIJEN<br></a><div class="dropdown-menu"><a class="text-success dropdown-item display-7" href="page8.html" aria-expanded="false">2017</a><a class="text-success dropdown-item display-7" href="page8.html" aria-expanded="false">2018</a></div>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link link text-success dropdown-toggle display-7" href="page7.html#header1-1l" data-toggle="dropdown-submenu" aria-expanded="false">TEKENINGEN</a><div class="dropdown-menu"><a class="text-success dropdown-item display-7" href="https://mobirise.com">2017</a><a class="text-success dropdown-item display-7" href="https://mobirise.com">2018</a></div>
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="mbr-section form1 cid-r72iVYznrb" id="form1-10">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-section form1 cid-r72iVYznrb" id="form1-10">
 
     
 
@@ -74,7 +74,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Dankjewel voor het berichtje!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="b5Y6E7twCNvylyUowO1x37TJ+HYqhNiJih1IFnK9p0Kf0mA+Fn/zv2dXMa+eLTl/7dSeaahUcMYdmkpE/iVzLc02r9t8xQmKDh0wVvxz7zdkZtiVgtWDgBqsMPlks1vh">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wTK5deGPhlsddT7o4NiXbT1c3Vz/EfmUKiBbGvPea+HYF3P+s+5v/00g86YUA3L2CuO/SgOjS/JL0TYqyfq4909wn6FgpVEUux96S3ITOT1XeRhM91Jnz8RuxR8e0ZDC">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
