--- a/page5.html
+++ b/page5.html
@@ -46,7 +46,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown open">
                     <a class="nav-link link text-success dropdown-toggle display-7" href="page4.html#header1-15" data-toggle="dropdown-submenu" aria-expanded="true">
-                        SCHILDERIJEN<br></a><div class="dropdown-menu"><a class="text-success dropdown-item display-7" href="page8.html" aria-expanded="false">2017</a><a class="text-success dropdown-item display-7" href="page17.html#content4-31" aria-expanded="false">2018</a></div>
+                        SCHILDERIJEN<br></a><div class="dropdown-menu"><a class="text-success dropdown-item display-7" href="page8.html" aria-expanded="false">2017</a><a class="text-success dropdown-item display-7" href="page8.html" aria-expanded="false">2018</a></div>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link link text-success dropdown-toggle display-7" href="page7.html#header1-1l" data-toggle="dropdown-submenu" aria-expanded="false">TEKENINGEN</a><div class="dropdown-menu"><a class="text-success dropdown-item display-7" href="https://mobirise.com">2017</a><a class="text-success dropdown-item display-7" href="https://mobirise.com">2018</a></div>
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="mbr-section content4 cid-r72xyuhnb4" id="content4-18">
+<section class="engine"><a href="https://mobirise.info/z">best free website templates</a></section><section class="mbr-section content4 cid-r72xyuhnb4" id="content4-18">
 
     
 
