--- a/page3.html
+++ b/page3.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own site</a></section><section class="mbr-section form1 cid-r72iVYznrb" id="form1-10">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section form1 cid-r72iVYznrb" id="form1-10">
 
     
 
@@ -74,7 +74,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Dankjewel voor het berichtje!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="21PQdwwyk3vAu1njibTAFeQ5G9+MZvtlNxEphS4743nyLDCOLDz9WJ1E7+9MlAJwxcwUnlZFz6NNziliDThJoXfZsWrb1K784/VMjKqnTRNV+c3K1KPcQXItUIummUTW">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sjjQh0x6OA7POIaUW4YAX9HX6Z0fDwyEzSw/uoxF5uKfTI2W7187cEmSz1cTiP8IbSqaFqo3Od5nK6UKsMdcW6XE00ZLZiK3L++CnN1VnCTaI+L4DfV1QzL5TXMLeLNq">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
