--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown open">
-                    <a class="nav-link link text-success dropdown-toggle display-7" href="page4.html#header1-15" data-toggle="dropdown-submenu" aria-expanded="true">
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown">
+                    <a class="nav-link link text-success dropdown-toggle display-7" href="page4.html#header1-15" data-toggle="dropdown-submenu" aria-expanded="false">
                         SCHILDERIJEN<br></a><div class="dropdown-menu"><a class="text-success dropdown-item display-7" href="page10.html" aria-expanded="false">2017</a><a class="text-success dropdown-item display-7" href="page8.html" aria-expanded="false">2018</a></div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link link text-success dropdown-toggle display-7" href="page7.html#header1-1l" data-toggle="dropdown-submenu" aria-expanded="false">TEKENINGEN</a><div class="dropdown-menu"><a class="text-success dropdown-item display-7" href="https://mobirise.com">2017</a><a class="text-success dropdown-item display-7" href="https://mobirise.com">2018</a></div>
-                </li><li class="nav-item dropdown"><a class="nav-link link text-success dropdown-toggle display-7" href="page9.html#header1-1r" aria-expanded="false" data-toggle="dropdown-submenu">FOTO'S</a><div class="dropdown-menu"><a class="text-success dropdown-item display-7" href="https://mobirise.com" aria-expanded="false">2017</a><a class="text-success dropdown-item display-7" href="https://mobirise.com" aria-expanded="false">2018<br></a></div></li><li class="nav-item"><a class="nav-link link text-success display-7" href="page3.html" aria-expanded="false">&nbsp; &nbsp; &nbsp; &nbsp; CONTACT</a></li></ul>
+                    <a class="nav-link link text-success dropdown-toggle display-7" href="page7.html#header1-1l" data-toggle="dropdown-submenu" aria-expanded="false">TEKENINGEN</a><div class="dropdown-menu"><a class="text-success dropdown-item display-7" href="page8.html">2017</a><a class="text-success dropdown-item display-7" href="page12.html">2018</a></div>
+                </li><li class="nav-item dropdown open"><a class="nav-link link text-success dropdown-toggle display-7" href="page9.html#header1-1r" aria-expanded="true" data-toggle="dropdown-submenu">FOTO'S</a><div class="dropdown-menu"><a class="text-success dropdown-item display-7" href="https://mobirise.com" aria-expanded="false">2017</a><a class="text-success dropdown-item display-7" href="https://mobirise.com" aria-expanded="false">2018<br></a></div></li><li class="nav-item"><a class="nav-link link text-success display-7" href="page3.html" aria-expanded="false">&nbsp; &nbsp; &nbsp; &nbsp; CONTACT</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best free website templates</a></section><section class="header1 cid-r70U8w9xGl" id="header1-n">
+<section class="engine"><a href="https://mobirise.info/b">create a website for free</a></section><section class="header1 cid-r70U8w9xGl" id="header1-n">
 
     
 
